--- a/05_Part_E_Design_Library/04_Experimental_Causal/05_Stepped_Wedge_Designs.Rmd
+++ b/05_Part_E_Design_Library/04_Experimental_Causal/05_Stepped_Wedge_Designs.Rmd
@@ -1,1 +1,96 @@
-## Stepped wedge designs
+---
+title: "Stepped Wedge designs"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+
+
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
+## Stepped Wedge Designs
+
+<!-- make sure to rename the section title below -->
+
+```{r stepped_wedge, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 100
+b_sims <- 20
+```
+
+```{r}
+library(DeclareDesign)
+library(tidyverse)
+
+# tau is treatment effect
+tau <- 1
+
+design <- 
+  declare_population(
+    t = add_level(N = 3, u_t = rnorm(N)),
+    i = add_level(N = 6, u_i = rnorm(N), nest = FALSE),
+    obs = cross_levels(by = join(t, i), u_ti = rnorm(N))) + 
+  declare_potential_outcomes(
+    Y_Z_0 = u_i + u_t + u_ti,
+    Y_Z_1 = u_i + u_t + u_ti + tau) + 
+  declare_assignment(clusters = i, 
+                     conditions = 1:3, 
+                     assignment_variable = "wave") + 
+  declare_step(Z = as.numeric(t >= wave), handler = fabricate) + 
+  declare_reveal(Y,Z) + 
+  declare_estimand(ate = mean(Y_Z_1 - Y_Z_0)) + 
+  declare_estimator(Y ~ Z, model = lm_robust, label = "bivariate") +
+  declare_estimator(Y ~ Z + i, model = lm_robust, label = "unit FE") +
+  declare_estimator(Y ~ Z + t, model = lm_robust, label = "period FE") +
+  declare_estimator(Y ~ Z + t + i, model = lm_robust, label = "two-way FE") 
+
+# Diagnose design
+diagnose_design(design)
+
+# Suppose effects are correlated with period
+# Potential outcomes
+pos_corr <- declare_potential_outcomes(
+  Y_Z_0 = u_i + u_t + u_ti,
+  Y_Z_1 = u_i + u_t + u_ti + tau * u_t
+)
+design_corr_period <- pop + pos_corr + assignment_to_wave + get_assignment_in_t +
+  reveal_Y + estimand + estimator 
+
+diagnose_design(design, design_corr_period)
+
+
+```
+
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+
+```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("05_Stepped_Wedge_Designs.Rmd"), "/simulations.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(simulations, path = rds_file_path)
+}
+simulations <- read_rds(rds_file_path)
+```
+
+
+### References
+
+
+
+
