--- a/_outline/outline.rmd
+++ b/_outline/outline.rmd
@@ -2,6 +2,8 @@
 title: "Research Design: Declare, Diagnose, Redesign"
 output: 
   html_document:
+    toc: true
+    toc_depth: 2
     number_sections: true
 ---
 
