--- a/01_Introduction/04_How_to_Use_This_Book/01_Software_Primer.Rmd
+++ b/01_Introduction/04_How_to_Use_This_Book/01_Software_Primer.Rmd
@@ -1,2 +1,75 @@
-# Software Primer
+---
+title: "Software Primer"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
+# Software primer
+
+<!-- make sure to rename the section title below -->
+
+```{r section_title, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 100
+b_sims <- 20
+```
+
+```{r, echo = FALSE}
+# load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
+```
+
+
+```{r, message = FALSE, warning = FALSE}
+library(DeclareDesign)
+
+set.seed(1) 
+# M -- Model
+
+population         <- declare_population(N = 5, u = rnorm(N))
+potential_outcomes <- declare_potential_outcomes(Y_Z_0 = 0,
+                                                 Y_Z_1 = 1 + u)
+# I -- Inquiries: A query defined in terms of potential outcomes
+estimand_1 <- declare_estimand(PATE = mean(Y_Z_1 - Y_Z_0))
+estimand_2 <- declare_estimand(SATE = mean(Y_Z_1 - Y_Z_0))
+
+# D -- Data Strategy: Researcher interventions on the world
+sampling   <- declare_sampling(n = 4)
+assignment <- declare_assignment()
+reveal_Y   <- declare_reveal(Y,Z)
+
+# A -- Answer steps
+estimate   <- declare_estimator(Y~Z, estimand = c("PATE", "SATE"))
+
+design <- population + potential_outcomes + estimand_2 +
+  sampling + estimand_1 + assignment + reveal_Y+ estimate
+
+simulations <- simulate_design(design, sims = 1)
+```
+
+<img src="pipedreams.pdf" alt="some text"  width="4200" height="4200">
+
+
+
+# References
+
+
+
+
+
+
+
 
